so many changes

--- a/index.html
+++ b/index.html
@@ -58,10 +58,26 @@
                 </a>
               </li>
               <li>
-                <a id="hrfSocials">
-                    <span>Socials</span>
-                    <img src="images/CloudLight.png">
-                </a>
+                <div class="SocialsContainer">
+                    <table>
+                        <tr>
+                            <td>
+                                <a href="https://www.facebook.com/tuire.nissinen.9" target="_blank" class="fa fa-facebook"></a>
+                            </td>
+                            <td>
+                                <a href="https://www.instagram.com/sugarixi/" target="_blank" class="fa fa-instagram"></a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="https://www.linkedin.com/in/tuire-nissinen-284756204/" target="_blank" class="fa fa-linkedin"></a>
+                            </td>
+                            <td>
+                                <a href="https://wa.me/358452542229" target="_blank" class="fa fa-whatsapp"></a>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
               </li>
             </ul>
             
@@ -71,7 +87,7 @@
             <div class="CharacterPic sparkles-always">
                 <img src="images/characterLight.png">
             </div>
-            <div class="MainContent sparkles-always">
+            <div class="MainContent">
                 <img class="Sun" src="images/Light.png">
                 <img class="HelloText" src="images/helloLight.png">
                 <div class="HomeContent">
