--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
 </head>
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 <body>
-    <div class="stage">
-        <div class="box bounce-4">
-            <span>Loading...</span>
-            <img src="images/Light.png">
-        </div>
-    </div>
-    <div class="websiteContent noDisplay">
+    <div class="websiteContent">
         <header class="header">
             <div class="MenuTitle">
                 <img src="images/titleLight.png">
