--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
+    <title>Tuire Nissinen Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="lightVars.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="hamburger.css">
-    <script src="https://alfital1.github.io/RixiStuff/sparkles.js" type="text/javascript"></script>
+    <script src="https://alfital1.github.io/RixiStuff/sparkles.js"></script>
     <script src="main.js"></script>
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 </head>
-<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+
 <body>
     <div class="websiteContent">
         <header class="header">
             <div class="MenuTitle">
-                <img src="images/titleLight.png">
+                <img src="images/titleLight.png" alt="Title">
             </div>
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -23,32 +26,32 @@
                     <span id="ModeText">
                         Dark Mode
                     </span>
-                    <img src="images/modeLight.png">
+                    <img src="images/modeLight.png" alt="Mode Toggle">
                 </a>
             </div>
             <ul class="menu">
               <li>
                 <a href="#">
                     <span>Home</span>
-                    <img src="images/CloudLight.png">
+                    <img src="images/CloudLight.png" alt="Cloud">
                 </a>
               </li>
               <li>
                 <a href="#AboutMe">
                     <span>About Me</span>
-                    <img src="images/CloudLight.png">
+                    <img src="images/CloudLight.png" alt="Cloud">
                 </a>
               </li>
               <li>
                 <a href="#Portfolio">
                     <span>Portfolio</span>
-                    <img src="images/CloudLight.png">
+                    <img src="images/CloudLight.png" alt="Cloud">
                 </a>
               </li>
               <li>
                 <a id="hrfContactMe">
                     <span>Contact Me</span>
-                    <img src="images/CloudLight.png">
+                    <img src="images/CloudLight.png" alt="Cloud">
                 </a>
               </li>
               <li>
@@ -79,11 +82,11 @@
 
         <div class="Home">
             <div class="CharacterPic sparkles-always">
-                <img src="images/characterLight.png">
+                <img src="images/characterLight.png" alt="Character">
             </div>
             <div class="MainContent">
-                <img class="Sun" src="images/Light.png">
-                <img class="HelloText" src="images/helloLight.png">
+                <img class="Sun" src="images/Light.png" alt="Sun">
+                <img class="HelloText" src="images/helloLight.png" alt="Hello there!">
                 <div class="HomeContent">
                     My Name is Tuire Nissinen
                     <br>
@@ -94,11 +97,11 @@
             </div>
         </div>
 
-        <a name="AboutMe"></a>
+        <a id="AboutMe"></a>
         <div class="Divider"></div>
         <div class="AboutMe">
             <div class="HalfSunContainerTop">
-                <img src="images/HalfLight.png">
+                <img src="images/HalfLight.png" alt="Half sun">
                 <span>About Me</span>
             </div>
             <div class="ContentHolder">
@@ -117,11 +120,11 @@ My name is Tuire Nissinen. I am 29-year-old Front End Developer based in Espoo, 
             </div>
         </div>
 
-        <a name="Portfolio"></a>
+        <a id="Portfolio"></a>
         <div class="Divider"></div>
         <div class="Portfolio">
             <div class="HalfSunContainerTop">
-                <img src="images/HalfLight.png">
+                <img src="images/HalfLight.png" alt="Half sun">
                 <span>Portfolio</span>
             </div>
             <div class="ContentHolder">
@@ -132,18 +135,18 @@ My name is Tuire Nissinen. I am 29-year-old Front End Developer based in Espoo, 
                             <br>
                         </div>
                         <div>
-                            <a href="https://sugarixi.github.io/" target="_blank"><img src="images/portfoliopic1.png"></a>
-                            <a href="https://tuirenissinen.github.io/" target="_blank"><img src="images/portfoliopic2.png"></a>
-                            <img src="images/portfoliopicWIPLight.png">
-                            <img src="images/portfoliopicWIPLight.png">
-                            <img src="images/portfoliopicWIPLight.png">
-                            <img src="images/portfoliopicWIPLight.png">
+                            <a href="https://sugarixi.github.io/" target="_blank"><img src="images/portfoliopic1.png" alt="Link"></a>
+                            <a href="https://tuirenissinen.github.io/" target="_blank"><img src="images/portfoliopic2.png" alt="Link"></a>
+                            <img src="images/portfoliopicWIPLight.png" alt="WIP">
+                            <img src="images/portfoliopicWIPLight.png" alt="WIP">
+                            <img src="images/portfoliopicWIPLight.png" alt="WIP">
+                            <img src="images/portfoliopicWIPLight.png" alt="WIP">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="BottomImg">
-                <img src="images/BottompicLight.png">
+                <img src="images/BottompicLight.png" alt="Scenery picture">
             </div>
         </div>
         <div class="DividerSmall">
@@ -158,7 +161,7 @@ My name is Tuire Nissinen. I am 29-year-old Front End Developer based in Espoo, 
                     <span class="close">&times;</span>
                     <div class="CloudContainer">
                         <span>Contact Me</span>
-                        <img src="images/CloudLight.png">
+                        <img src="images/CloudLight.png" alt="Cloud">
                     </div>
 
                     <div class="InfoContainer">
