--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
 <head>
     <title>Tuire Nissinen Portfolio</title>
+    <!--kolmannen osapuolen CSS ja JS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://alfital1.github.io/RixiStuff/sparkles.js"></script>
+    <!-- minun CSS ja JS-->
     <link rel="stylesheet" href="lightVars.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="hamburger.css">
-    <script src="https://alfital1.github.io/RixiStuff/sparkles.js"></script>
     <script src="main.js"></script>
+    <!-- Responsiivisuus-->
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 </head>
 
 <body>
     <div class="websiteContent">
+        <!--Menu-->
         <header class="header">
             <div class="MenuTitle">
                 <img src="images/titleLight.png" alt="Title">
@@ -79,7 +83,7 @@
             </ul>
             
         </header>
-
+        <!--Home osio-->
         <div class="Home">
             <div class="CharacterPic sparkles-always">
                 <img src="images/characterLight.png" alt="Character">
@@ -96,7 +100,7 @@
                 </div>
             </div>
         </div>
-
+        <!--About Me osio-->
         <a id="AboutMe"></a>
         <div class="Divider"></div>
         <div class="AboutMe">
@@ -119,7 +123,7 @@ My name is Tuire Nissinen. I am 29-year-old Front End Developer based in Espoo, 
                 </div>
             </div>
         </div>
-
+        <!--Porfolio osio-->
         <a id="Portfolio"></a>
         <div class="Divider"></div>
         <div class="Portfolio">
@@ -149,13 +153,14 @@ My name is Tuire Nissinen. I am 29-year-old Front End Developer based in Espoo, 
                 <img src="images/BottompicLight.png" alt="Scenery picture">
             </div>
         </div>
+        <!--Alabaari ja copyrightti-->
         <div class="DividerSmall">
             © Graphics By Tuire Nissinen and <a href="https://www.instagram.com/devilyche/" target="_blank">Tia Falck</a>
         </div>
 
-        <!-- The Modal -->
+        <!--Contact me pop uppi-->
         <div id="myModal" class="modal">
-            <!-- Modal content -->
+            <!-- Contact me sisältö -->
             <form target="_blank" action="https://formsubmit.co/f6f50882507d473a5b1bf310922e50ae " method="POST">
                 <div class="modal-content">
                     <span class="close">&times;</span>
@@ -163,7 +168,7 @@ My name is Tuire Nissinen. I am 29-year-old Front End Developer based in Espoo, 
                         <span>Contact Me</span>
                         <img src="images/CloudLight.png" alt="Cloud">
                     </div>
-
+                    <!--Contact me tiedot-->
                     <div class="InfoContainer">
                         <div class="Info">
                             <input type="text" placeholder="Name" name="Name" />
