--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ My name is Tuire Nissinen. I am 29-year-old Front End Developer based in Espoo, 
                             <br>
                         </div>
                         <div>
-                            <a href="https://sugarixi.github.io/" target="_blank"><img src="images/portfoliopic1.png" alt="Link"></a>
-                            <a href="https://tuirenissinen.github.io/" target="_blank"><img src="images/portfoliopic2.png" alt="Link"></a>
+                            <a href="https://sugarixi.github.io/sugarixi/" target="_blank"><img src="images/portfoliopic1.png" alt="Link"></a>
+                            <a href="https://sugarixi.github.io/" target="_blank"><img src="images/portfoliopic2.png" alt="Link"></a>
                             <img src="images/portfoliopicWIPLight.png" alt="WIP">
                             <img src="images/portfoliopicWIPLight.png" alt="WIP">
                             <img src="images/portfoliopicWIPLight.png" alt="WIP">
